# LEGVO

./: .gitignore  .gitmodules  README.md  pyproject.toml
datasets/single_transform_full/: ground_truth.json
datasets/single_transform_full/expr_add_zero/2mm/: sample_15.c  sample_23.c  sample_26.c  sample_8.c  sample_9.c
datasets/single_transform_full/expr_add_zero/3mm/: sample_13.c  sample_16.c  sample_19.c  sample_25.c
datasets/single_transform_full/expr_add_zero/adi/: sample_0.c  sample_13.c  sample_14.c  sample_15.c  sample_16.c  sample_17.c  sample_19.c  sample_22.c  sample_24.c  sample_6.c
datasets/single_transform_full/expr_add_zero/atax/: sample_25.c  sample_5.c  sample_6.c
datasets/single_transform_full/expr_add_zero/bicg/: sample_15.c  sample_2.c  sample_7.c
datasets/single_transform_full/expr_add_zero/cholesky/: sample_4.c  sample_5.c
datasets/single_transform_full/expr_add_zero/correlation/: sample_0.c  (+4 more)
docs/: reproduce_eval.md
examples/: interchange_cand.c  interchange_ref.c
scripts/: run_ablation.py  run_ablation_interchange.py  run_baseline_alive2.py  run_baseline_pet.py  run_phase12_per_transform.py  run_timing_breakdown.py  verify_accuracy.sh
src/legvo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/legvo/egraph/: dependence.py  extract.py  normalize.py  oracle.py  rules.py  term.py  verify.py
src/legvo/polyhedral/: cli.py  extract.py  isl_helpers.py  model.py  verify.py
tests/egraph/: test_extract.py  test_normalize.py  test_verify.py
tests/polyhedral/: test_isl_helpers.py  test_verify.py
(+7059 files in other folders)
